<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_designers">Designers</string>
    <string name="title_profile">Profile</string>
    <string name="fashion_designer_name">Riya Chhabra</string>
    <string name="fashion_designer_tagline">Be uniquely styled</string>
    <string name="label_followings">Following</string>
    <string name="filter_type">Type</string>
    <string name="filter_price">Price</string>
    <string name="filter_pattern">Pattern</string>
    <string name="filter_knit_or_woven">Knit/Woven</string>
    <string name="filter_washcare">Washcare</string>
    <string name="filter_color">Color</string>
    <string name="filter_material">Material</string>
    <string name="filter_occasion">Occasion</string>
    <string name="filter_season">Season</string>
    <string name="filter_size">Size</string>
    <string name="filter_designer">Designer</string>
    <string name="title_filters">Filters</string>
    <string name="title_clear_all">Clear All</string>
    <string name="btn_close">Close</string>
    <string name="btn_apply">Apply</string>
    <string name="title_price_range">Selected Price range</string>
    <string name="dollar_symbol">$</string>
    <string name="dash_sign">-</string>
    <string name="server_error">Something went wrong!</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unisex">Unisex</string>
    <string name="select_age_group">Select age group</string>
    <string name="baby">Baby (1-2 years)</string>
    <string name="kids">Kids</string>
    <string name="adult">Adult</string>
    <string name="wishlist">wishlist</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_material_and_care"><![CDATA[Material & Care]]></string>
    <string name="title_size_and_fit"><![CDATA[Size & Fit]]></string>
    <string name="title_product_color">Color</string>
    <string name="product_image">Product</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_province">Province</string>
    <string name="label_city">City</string>
    <string name="link_change_password">Change password?</string>
    <string name="btn_save">Save</string>
    <string name="ok">Ok</string>
    <string name="title_my_profile">My Profile</string>
    <string name="dialog_province_msg">Select Province</string>
    <string name="logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="msg_empty_filter_product_list">No matching products found.</string>
    <string name="not_implemented">Not implemented yet.</string>
    <string name="msg_no_catalogues">No catalogues.</string>
    <string name="by">"By "</string>
    <string name="likes">Likes</string>
    <string name="no_size_found">No sizes available.</string>
    <string name="no_color_found">No colors available.</string>
    <string name="no_material_found">No Material available.</string>
    <string name="machine_wash_care">Machine-Wash</string>
    <string name="hand_wash_care">Hand-Wash</string>
    <string name="dry_clean_wash_care">Dry Clean</string>
    <string name="product_not_available_message">Product is not available for selected size and color.</string>
    <string name="product_available_message">Thank you for choosing product from Vastra. We will be back soon for ordering your product.</string>
    <string name="select_size_message">Please select any product size to add product into cart.</string>
    <string name="select_color_message">Please select any product color to add product into cart.</string>
    <string name="title_my_cart">My Cart</string>
    <string name="place_order">Place Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you_msg">Thank you for placing an order with Vastra.</string>
</resources>