<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_filters"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            android:gravity="start"
            android:textColor="@color/primary"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_clear_all"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_gravity="end"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/leftSearchPanel"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_screen_dark">

        <TextView
            android:id="@+id/filterByType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_pattern"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByKnitOrWoven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_knit_or_woven"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByWashCare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_washcare"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_material"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByOccasion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_occasion"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterBySeason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_season"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterBySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_size"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/filterByDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_designer"
            android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp">

        <android.widget.Button
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Vastra.Button.Filled"
            android:layout_gravity="center"
            android:text="@string/btn_close"
            android:layout_marginStart="2dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <android.widget.Button
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Vastra.Button.Filled"
            android:layout_gravity="center"
            android:text="@string/btn_apply"
            android:layout_marginEnd="2dp" />

    </LinearLayout>

</LinearLayout>