<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.esolution.vastrashopper.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_designers"
        android:name="com.esolution.vastrashopper.ui.designers.DesignersFragment"
        android:label="@string/title_designers"
        tools:layout="@layout/fragment_designers" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.esolution.vastrashopper.ui.profile.ShopperProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_shopper_profile" />
</navigation>