<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/parentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:gravity="center_vertical"
    android:paddingTop="4dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfilePic"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/img"
            android:scaleType="centerCrop"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/title_profile"
            android:background="@drawable/bg_profile_image_filled"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textViewFDName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fashion_designer_name"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/accent"/>

            <TextView
                android:id="@+id/textViewBrandName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_regular"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp"
                android:text="@string/fashion_designer_tagline"/>

        </LinearLayout>

</LinearLayout>