<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPriceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/title_price_range"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dollar_symbol"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/minPriceRange"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_bold"
            android:text="700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dash_sign"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dollar_symbol"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/maxPriceRange"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_bold"
            android:text="1400"/>

    </LinearLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceRangeSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:valueFrom="0.0"
        android:valueTo="10000.0"
        android:stepSize="100.0"
        app:values="@array/initial_slider_values"/>

</LinearLayout>